[gd_scene load_steps=9 format=2]

[ext_resource path="res://Asset/Art/GameOver/GameOverBG.jpg" type="Texture" id=1]
[ext_resource path="res://Asset/Art/GameOver/GameOverMAN.png" type="Texture" id=2]
[ext_resource path="res://Asset/Art/GameOver/GameOverTEXT.png" type="Texture" id=3]
[ext_resource path="res://Src/UI/GameOver/GameOver.gd" type="Script" id=4]
[ext_resource path="res://Resource/Font/kimberley.ttf" type="DynamicFontData" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverUI/UI:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverUI/UI:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "fadeIn"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BackGround/GameOverText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverUI/UI:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameOverUI/UI:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 5 )

[node name="GameOver" type="Node2D"]
script = ExtResource( 4 )

[node name="BackGround" type="Sprite" parent="."]
scale = Vector2( 0.166667, 0.166667 )
texture = ExtResource( 1 )
centered = false

[node name="GameOverMan" type="Sprite" parent="BackGround"]
texture = ExtResource( 2 )
centered = false

[node name="GameOverText" type="Sprite" parent="BackGround"]
modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 3 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/fadeIn = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="GameOverUI" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="GameOverUI"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -341, -25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="GameOverUI/UI"]
margin_top = 149.0
margin_right = 320.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( -167, 128 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="GameOverUI/UI/Buttons"]
margin_left = 102.0
margin_right = 104.0
margin_bottom = 19.0
rect_min_size = Vector2( 2, 0 )

[node name="Retry" type="Button" parent="GameOverUI/UI/Buttons"]
margin_left = 108.0
margin_right = 146.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
text = "Retry"

[node name="Control" type="Control" parent="GameOverUI/UI/Buttons"]
margin_left = 150.0
margin_right = 150.0
margin_bottom = 19.0

[node name="MainMenu" type="Button" parent="GameOverUI/UI/Buttons"]
margin_left = 154.0
margin_right = 217.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
text = "Main Menu"

[connection signal="tween_completed" from="Tween" to="." method="_on_tween_completed"]
